--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ color:rgb(89,89,89);font-size:10.5000pt;mso-font-kerning:1.0000pt;"><font face="
                 <ul class="experience-list">
                     <li>
                         <h3 contenteditable="false"><b>宁夏卫星可视化平台</b></h3>
-                        <p contenteditable="false"><b>项目介绍：</b>本项目是一个基于Vue2+Element UI框架开发的集合卫星介绍、新闻阅览</br>编辑、用户管理、订单管理、可视化大屏为一体的页面+大屏项目</p><div><b>项目职责：</b>1.使用了Element UI的各类组件，实现了轮播图以及版面布局等功能；</div><div> 2.使用了ECharts组件，实现卫星返回数据实时更新，让数据简洁透明；</div><div> 3.实现首页定时通知消息的飘窗以及其设置页面</div><div> 4.实现卫星筛选，筛选结果映射到地图的功能，将选中结果添加到购物车</div><p contenteditable="false"></p>
+                        <p contenteditable="false"><b>项目介绍：</b>本项目是一个基于Vue2+Element UI框架开发的集合卫星介绍、新闻阅览、编辑、用户管理、订单管理、可视化大屏为一体的页面+大屏项目</p><div><b>项目职责：</b>1.使用了Element UI的各类组件，实现了轮播图以及版面布局等功能；</div><div> 2.使用了ECharts组件，实现卫星返回数据实时更新，让数据简洁透明，实现饼图数据过多时可翻页选取数据</div><div> 3.实现首页定时通知消息的飘窗以及其设置页面</div><div> 4.实现卫星筛选，筛选结果映射到地图的功能，将选中结果添加到购物车</div><p contenteditable="false"></p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
                         <h3 contenteditable="false"><b>广东省地图院省市县地图服务</b></h3>
@@ -124,7 +124,7 @@ color:rgb(89,89,89);font-size:10.5000pt;mso-font-kerning:1.0000pt;"><font face="
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
                         <h3 contenteditable="false"><b>监测计算平台</b></h3>
-                        <p contenteditable="false"><b>项目介绍：</b>本项目是使用Vue3+element-plus-admin框架开发，关于反馈业务流程</br> &nbsp;进展、资源配置、设计工作流程以及数据概览等业务管理系统</p><div><b>项目职责：</b><span style="display: inline !important;">1.使用element-plus-admin内置组件实现页面整体布局</span></div><div> 2.封装公用组件在页面中引入使用</div><div> 3.通过实现防抖搜索--中文输入法即时查询</div><div> 4.使用公司内部地图组件完成地图及工具箱功能制作</div><p contenteditable="false"></p>
+                        <p contenteditable="false"><b>项目介绍：</b>本项目是使用Vue3+element-plus-admin框架开发，关于反馈业务流程</br> &nbsp;进展、资源配置、设计工作流程以及数据概览等业务管理系统</p><div><b>项目职责：</b><span style="display: inline !important;">1.使用element-plus-admin内置组件实现页面整体布局</span></div><div> 2.封装公用组件在页面中引入使用</div><div> 3.通过实现防抖搜索--中文输入法即时查询</div><div> 4.使用公司内部地图组件完成地图及工具箱功能制作,在地图上实现测距、测面、卷帘、瓦片对比功能</div><div>5.实现用户长时间未操作后自动退出功能</div><p contenteditable="false"></p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                 <li>
                         <h3 contenteditable="false"><b>Earth Insight</b></h3>
